--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+
+	<p>What is the capital of India?</p>
+	<input type="radio" id="Newdelhi">
+<label for="Newdelhi">New Delhi</label><br>
+	
+<input type="radio" id="Mumbai">
+	<label for="Mumbai">Mumbai</label>
+
+	<blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
